refactor(core): 更新服务获取方式和UI组件资源管理
- 将 ServiceManager.getService 替换为单例模式 getInstance 方法
- 在 GitCommitMessageHelperSettings 中添加静态实例获取方法
- 将 URL 替换为 URI 以改进 HTTP 连接创建
- 为 TemplateEditPanel 实现 Disposable 接口并添加资源清理
- 更新描述面板编辑器套件为 JBHtmlEditorKit
- 修正别名表重置按钮操作注册方法名
- 添加配置界面 UI 资源释放实现